# termux_ultra_downloader

./: .flake8  README.md  debug_yt_dlp.py  fix_path.py  main.py  pyproject.toml  requirements.txt  url.txt
config/: __init__.py  config_manager.py  settings.py  user_settings.json  user_settings.py
core/: __init__.py  audio.py  batch.py  downloader.py  ffmpeg_utils.py  platforms.py  playlist.py  validator.py  video.py
scripts/: install.sh  setup_storage.py
ui/: __init__.py  input_styles.py  tui.py  tui_animations.py
ui/logos/: __init__.py  audio_logo.py  batch_logo.py  config_logo.py  main_logo.py  playlist_logo.py  video_logo.py
utils/: __init__.py  banner.py  colors.py  logger.py  path_manager.py  validator.py
